Fix object-fit on IE and Edge

--- a/src/components/Background/index.css
+++ b/src/components/Background/index.css
@@ -25,15 +25,29 @@
   }
 }
 
-.image {
+.stretch-to-fit {
   position: absolute !important;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  top: -50%;
+  left: -50%;
 
-  width: 100%;
-  height: 100%;
+  width: 200%;
+  height: 200%;
+
+  /* Selects all browsers except IE and Internet Explorer */
+  @supports (object-fit: cover) and (not (-ms-ime-align: auto)) {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.image {
+  @extend .stretch-to-fit;
 
   opacity: 0.9;
 }
@@ -45,15 +59,7 @@
 }
 
 .video {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  @extend .stretch-to-fit;
 
   background-attachment: fixed;
   background-position: center;
